# tinysandbox

./: Cargo.toml  LICENSE-MIT  PLAN.md  README.md  original-plan.md
.github/workflows/: ci.yml  release.yml
assets/: PROVENANCE.md  quickjs.wasm
examples/: custom_command.rs  js_scripts.rs  memory_benchmark.rs  quickstart.rs
scripts/: build-quickjs-wasm.sh  release-version.mjs  release-version.test.mjs
src/: lib.rs  prompts.rs
src/js/: mod.rs  quickjs_shim.c
src/machine/: builtins.rs  command.rs  fs.rs  mod.rs
src/sandbox/: builtins.rs  command.rs  fs.rs  jq.rs  mod.rs  syscall.rs
src/shell/: lex.rs  mod.rs  parse.rs
src/vfs/: conformance.rs  local.rs  mem.rs  mod.rs
tests/: js_runtime.rs  machine_e2e.rs  sandbox_e2e.rs  shell_errors.rs  shell_golden.rs  shell_proptest.rs  streaming.rs  vfs_conformance.rs  vfs_external_impl.rs  vfs_local.rs  vfs_proptest.rs
tests/fixtures/: machine_builtins_golden.txt  sandbox_builtins_golden.txt  shell_golden.txt
tinysandbox-node/: Cargo.toml  README.md  index.d.ts  native.cjs  native.d.ts  package-lock.json  package.json
tinysandbox-node/__test__/: local_vfs.test.mjs  sandbox.test.mjs
tinysandbox-node/benchmarks/: memory.ts
tinysandbox-node/src/: lib.rs
