[package]
name = "thinbox"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1", optional = true }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time", "io-util"] }
wasmtime = { version = "46.0.1", default-features = false, features = ["runtime", "cranelift", "std"], optional = true }

[dev-dependencies]
proptest = "1.11.0"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "rt", "time", "io-util"] }

[features]
default = ["js"]
js = ["dep:base64", "dep:serde", "dep:serde_json", "dep:wasmtime"]

[[example]]
name = "js_scripts"
required-features = ["js"]
