[workspace]
members = ["tinysandbox-node"]
resolver = "3"

[package]
name = "tinysandbox"
version = "0.4.3"
edition = "2024"
description = "Ultra-minimal Linux-like sandbox for AI agents: shell, coreutils, VFS, and a Wasmtime-hosted JS runtime in one crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danthegoodman1/tinysandbox"
readme = "README.md"
keywords = ["sandbox", "agent", "shell", "vfs", "quickjs"]
categories = ["virtualization", "filesystem", "development-tools"]
exclude = ["PLAN.md", "original-plan.md", ".github/", ".vscode/", "scripts/release-version*.mjs", "tinysandbox-node/"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
jaq-core = "3.1.0"
jaq-json = { version = "2.0.1", features = ["serde", "sync"] }
jaq-std = "3.0.1"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time", "io-util", "sync"] }
wasmtime = { version = "46.0.1", default-features = false, features = ["runtime", "cranelift", "std"], optional = true }

[dev-dependencies]
proptest = "1.11.0"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "rt", "time", "io-util"] }

[features]
default = ["js"]
js = ["dep:base64", "dep:wasmtime"]

[[example]]
name = "js_scripts"
required-features = ["js"]

[[example]]
name = "js_syscalls"
required-features = ["js"]
